--- a/praticando_html_css/styles/style.css
+++ b/praticando_html_css/styles/style.css
@@ -6,11 +6,6 @@
     --fonte-principal: 'Inter';
 }
 
-* {
-    margin: 0;
-    padding: 0;
-}
-
 body {
     background-color: var(--cor-de-fundo);
     color: var(--branco-principal);
@@ -19,29 +14,23 @@ body {
     font-weight: 400;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
 .principal {
     background-image: url("../img/Background.png");
     background-repeat: no-repeat;
     background-size: contain;
+    align-items: center;
+    text-align: center;
 }
 
 .container {
-    height: 180vh;
+    height: 100vh;
     display: grid;
     grid-template-columns: 50% 50%;
-}
-
-.container__caixa {
-    margin: 0 6em;
-}
-
-.container__titulo {
-    font-size: 28px;
-    font-weight: 700;
-}
-
-.container__imagem {
-    margin: 1em 0 2em 0;
 }
 
 .container__botao {
@@ -56,11 +45,52 @@ body {
 
 .botao_secundario {
     background-color: transparent;
-    border: 2px solid var(--branco-principal);
+    border: 2px solid var(--branco-principal)
 }
 
 .container__aviso {
     font-size: 12px;
     color: var(--cinza-secundario);
+}
 
+.container__titulo {
+    font-size: 28px;
+    font-weight: 700;
+}
+
+.container__imagem {
+    margin: 1em 0 2em 0;
+}
+
+.container__caixa {
+    margin: 0 6em;
+}
+
+.secundario__imagem {
+    width: 80%;
+}
+
+.secundario {
+    align-items: center;
+    margin: 0 10em;
+}
+
+.descricao__titulo {
+    font-weight: 700;
+    font-size: 48px;
+    color: var(--branco-principal);
+    margin-bottom: 0.1em;
+}
+
+.descricao__texto {
+    color: var(--cinza-secundario);
+}
+
+.secundario__botao {
+    display: inline-block;
+    margin-top: 1em;
+}
+
+.container__descricao {
+    padding: 2em;
 }
