--- a/praticando_html_css/styles/style.css
+++ b/praticando_html_css/styles/style.css
@@ -94,3 +94,58 @@ body {
 .container__descricao {
     padding: 2em;
 }
+
+.dispositivos {
+    text-align: center;
+    color: var(--branco-principal);
+
+}
+
+.dispositivos__titulo {
+    font-size: 48px;
+
+}
+
+.dispositivos__lista {
+    display: flex;
+    list-style-type: none;
+    justify-content: center;
+    margin: 5em 0;
+}
+
+.lista__item {
+    font-size: 32px;
+}
+
+.rodape {
+    text-align: center;
+    align-items: center;
+}
+
+.rodape__logo {
+    padding: 3em;
+}
+
+.rodape__lista {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    list-style-type: none;
+    gap: 16px;
+    font-size: 16px;
+    color: var(--branco-principal);
+    margin-bottom: 24px;
+
+}
+
+.lista__link {
+    color: var(--branco-principal);
+    text-decoration: none;
+}
+
+.rodape__texto {
+    color: var(--cinza-secundario);
+    font-size: 14px;
+    padding: 1em;
+    
+}
