--- a/praticando_html_css/styles/style.css
+++ b/praticando_html_css/styles/style.css
@@ -119,7 +119,7 @@ body {
 
 .rodape {
     text-align: center;
-    align-items: center;
+    margin: 5em 3em;
 }
 
 .rodape__logo {
@@ -128,24 +128,20 @@ body {
 
 .rodape__lista {
     display: flex;
-    flex-direction: row;
     justify-content: center;
     list-style-type: none;
-    gap: 16px;
-    font-size: 16px;
-    color: var(--branco-principal);
-    margin-bottom: 24px;
+    margin-top: 1em;
 
 }
 
-.lista__link {
-    color: var(--branco-principal);
+.lista__link a{
     text-decoration: none;
+    color: var(--branco-principal);
+    margin-left: 1em;
 }
 
 .rodape__texto {
     color: var(--cinza-secundario);
     font-size: 14px;
-    padding: 1em;
-    
+    margin: 1em 0;
 }
