Adicionado efeitos de hover e active em botões

--- a/praticando_html_css/styles/style.css
+++ b/praticando_html_css/styles/style.css
@@ -4,6 +4,7 @@
     --botao-azul: #167BF7;
     --cor-de-fundo: #00030C;
     --fonte-principal: 'Inter';
+    --botao-azul-efeito: #3c92fa;
 }
 
 body {
@@ -41,6 +42,11 @@ body {
     display: block;
     text-decoration: none;
     margin-bottom: 1em;
+}
+
+.container__botao:hover {
+    background-color: var(--botao-azul-efeito);
+    color: var(--cor-de-fundo);
 }
 
 .botao_secundario {
@@ -91,6 +97,8 @@ body {
     margin-top: 1em;
 }
 
+.secundario__botao
+
 .container__descricao {
     padding: 2em;
 }
@@ -138,6 +146,14 @@ body {
     text-decoration: none;
     color: var(--branco-principal);
     margin-left: 1em;
+}
+
+.lista__link a:hover {
+    color: var(--botao-azul);
+}
+
+.lista__link a:active {
+    color: purple;
 }
 
 .rodape__texto {
