--- a/mobile_first/styles/topicos.css
+++ b/mobile_first/styles/topicos.css
@@ -12,7 +12,7 @@
 
 .topicos__lista {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: wrap;        /* Quebra de linha ativada */
     justify-content: center;
 }
 
