--- a/mobile_first/styles/header.css
+++ b/mobile_first/styles/header.css
@@ -24,7 +24,9 @@
     padding: 1em;
 }
 
-.container__botao {
+.container__botao,
+.container__titulo,
+.opcoes {
     display: none;
 }
 
@@ -32,7 +34,7 @@
     display: none;
     position: absolute;
     top: 100%;
-    width: 60vh;
+    width: auto;
 }
 
 .container__botao:checked ~ .lista-menu {
@@ -56,4 +58,50 @@
     -webkit-text-fill-color: transparent;
     background-clip: text;
     text-transform: uppercase;
+}
+
+/* max-width quando utilizar desktop first */
+@media screen and (min-width: 1024px) {
+    .cabecalho__menu-hamburguer,
+    .container__imagem-transparente {
+        display: none;
+    }
+
+    .container__titulo, 
+    .container__titulo--negrito {
+        font-family: var(--fonte-secundaria);
+        font-size: 30px;
+    }
+
+    .container__titulo {
+        display: block;
+        font-weight: 400;
+    }
+
+    .container__titulo--negrito {
+        font-weight: 700;
+    }
+
+    .opcoes {
+        display: flex;
+    }
+
+    .opcoes__item {
+        padding: 0 1em;
+        text-transform: uppercase;
+    }
+
+    .opcoes__link {
+        text-decoration: none;
+        color: var(--preto);
+    }
+
+    .opcoes__botao:checked ~ .lista-menu {
+        display: block;
+        width: auto;
+    }
+
+    .opcoes__botao {
+        display: none;
+    }
 }
