--- a/mobile_first/styles/header.css
+++ b/mobile_first/styles/header.css
@@ -26,7 +26,8 @@
 
 .container__botao,
 .container__titulo,
-.opcoes {
+.opcoes,
+.container__texto {
     display: none;
 }
 
@@ -104,4 +105,26 @@
     .opcoes__botao {
         display: none;
     }
+}
+
+@media screen and (min-width:1728px) {
+    .container__texto {
+        display: block;
+    }
+
+    .container__link {
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color: var(--preto);
+    }
+
+    .cabecalho {
+        padding: 0 2em;
+    }
+
+    .opcoes {
+        margin-right: auto;
+    }
+
 }
